fixed contrast issue

--- a/assets/css/skin-switch.css
+++ b/assets/css/skin-switch.css
@@ -219,7 +219,6 @@
   border-color: #666;
 }
 .page-dark-mode code {
-  color: #c7254e;
   background-color: #2b2829;
 }
 .page-dark-mode .highlight > pre {
